--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,7 @@
    ========================================================================== */
 @font-face {
   font-family: 'Cabrito Semi';
-  src: url("../fonts/cabritoseminormregular-webfont.eot");
-  src: url("../fonts/cabritoseminormregular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/cabritoseminormregular-webfont.woff2") format("woff2"), url("../fonts/cabritoseminormregular-webfont.woff") format("woff"), url("../fonts/cabritoseminormregular-webfont.ttf") format("truetype"), url("../fonts/cabritoseminormregular-webfont.svg#cabrito_semi_norm_regulnormRg") format("svg");
-  font-weight: normal;
-  font-style: normal; }
+  src: url("../fonts/cabritoseminormregular-webfont.woff2") format("woff2"), url("../fonts/cabritoseminormregular-webfont.woff") format("woff"), url("../fonts/cabritoseminormregular-webfont.ttf") format("truetype"); }
 
 /* UI tweaks
    ========================================================================== */
